2001-06-10  Martin Baulig  <baulig@suse.de>

	* gnome-exec.c (gnome_prepend_terminal_to_vector): Use bonobo-config, not gnome-config.

2001-06-10  Cody Russell  <bratsche@gnome.org>

	* gnome-preferences: Change preprocessor pasting from ##t## to just ## t.

2001-06-10  Martin Baulig  <baulig@suse.de>

	* gnome-ditem.c (gnome_ditem_save): Implemented.

2001-06-10  Martin Baulig  <baulig@suse.de>

	* gnome-ditem.c: Rewrote this to use bonobo-config with the new ditem moniker.
	(the old version of this file is at CVS revision 1.40).

	* gnome-ditem.h (GnomeDesktopItemLoadFlags): Removed
	GNOME_DESKTOP_ITEM_LOAD_NO_DROP and GNOME_DESKTOP_ITEM_LOAD_NO_OTHER_SECTIONS.
	(gnome_desktop_item_get_type): Changed return value to GNOME_DesktopEntryType.
	(gnome_desktop_item_get_command): Now returns a `gchar *' which you need to g_free.
	(gnome_desktop_item_get_icon_path): Likewise.
	(gnome_desktop_item_get_name): Likewise.
	(gnome_desktop_item_get_comment): Likewise.
	(gnome_desktop_item_get_local_name): Likewise.
	(gnome_desktop_item_get_local_comment): Likewise.
	(gnome_desktop_item_get_attribute): New returns a `BonoboArg *' (which you need
	to bonobo_arg_release).
	(gnome_desktop_item_set_attributes): Takes a `const BonoboArg *' as argument.
	(gnome_desktop_item_get_local_attributes): Removed.
	(gnome_desktop_order_get_order): Now returns a `GSList *', you need to g_free the
	strings in that list.
	(gnome_desktop_order_set_type): Takes a GNOME_DesktopEntryType.

2001-06-10  Martin Baulig  <baulig@suse.de>

	* gnome-desktop.xmldb: Moved to ../monikers.

2001-06-05  Martin Baulig  <baulig@suse.de>

	* gnome-desktop.xmldb: New file.

	* gnome-url.c: Use bonobo-config instead of gnome-config.

	* libgnome-init.h (gnome_get_config_database): New function.

	* Makefile.am (libgnome_headers): Don't install gnome-config.h.
	(libgnome_src): Removed gnome-triggers.c.

	* libgnome.h: Don't #include <libgnome/gnome-config.h>.

2001-06-04  Martin Baulig  <baulig@suse.de>
