@@ -1,5 +1,8 @@
 2001-06-10  Martin Baulig  <baulig@suse.de>
 
+	* gnome-i18n.c: #ifdef FIXME all gnome_config_calls. The big FIXME is to decide whether
+	we still want/need this at all.
+
 	* gnome-exec.c (gnome_prepend_terminal_to_vector): Use bonobo-config, not gnome-config.
 
 2001-06-10  Cody Russell  <bratsche@gnome.org>
